--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: Urban Heat Measurement
+title: Detailed air temperature measurement of Biel/Bienne
 author: Gabrial Erismann
 logo: figures/logo.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
 execute:
-  execute_notebooks: force
+  execute_notebooks: auto
 
 # Define the name of the latex output file for PDF builds
 latex:
